# ROS2-AI-VTuber-Projects

./: .gitignore  README.md  chatgpt.txt  speak_ros.repos
aivtuber_bringup/: package.xml  setup.cfg  setup.py
aivtuber_bringup/launch/: aivtuber_nao.launch.py
chatgpt_socket/: package.xml  setup.cfg  setup.py
chatgpt_socket/chatgpt_socket/: chatgpt_socket_node.py
comment_msgs/: CMakeLists.txt  package.xml
comment_msgs/msg/: Chat.msg
meeting/: .gitignore
meeting/meeting_bringup/: package.xml  setup.cfg  setup.py
meeting/meeting_bringup/launch/: meet_nao.launch.py
motion_socket/: package.xml  setup.cfg  setup.py
motion_socket/motion_socket/: motion_socket_node.py
webots_world/nao/: README.md  start_sim.bash
webots_world/nao/controllers/nao_demo/: nao_demo.c  tcp_socket.h
webots_world/nao/controllers/nao_demo/rest_c/: global_variable.h  rest_tcp_server.h  restapi.h  restapi_type.h  restfullapi_main.c
webots_world/nao/worlds/: nao_room.wbt
youtube_comment/: package.xml  setup.cfg  setup.py
youtube_comment/youtube_comment/: youtube_comment_node.py
