<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>meeting_bringup</name>
  <version>0.0.0</version>
  <description>AIVtuber bringup</description>
  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <exec_depend>chatgpt_socket</exec_depend>
  <exec_depend>comment_msgs</exec_depend>
  <exec_depend>motion_socket</exec_depend>
  <exec_depend>speak_ros</exec_depend>
  <exec_depend>speak_ros_voicevox_plugin</exec_depend>
  <exec_depend>youtube_comment</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
